nueva nav bar y footer

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
 <div class="intro container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
-    <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
+    <h1 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h1>
       <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
-      <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, <br> así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
-      <p class="texto__texto">El pick estrella de este parche es <strong class="strong"> Lee Sin</strong> debido a su flexibilidad /(?) </p>
+      <P class="texto__texto">Aquí encontrarás los mejores campeones para hacerlo en la cola individual, actualizados parche a parche</P>
+      <p class="texto__texto"></p>
   </div>
 </div>
 
@@ -95,9 +95,9 @@
     <a href="" class="tarj__foto zoom"><img src="multimedia/lee sin.jpg" alt="lee"></a>
     <article class="tarj__textos">
       <h3 class="tarj__titulo"><a href="#" class="tarj__enlace">Lee Sin</a></h3>
-      <p class="tarj__descripcion"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ullam amet quibusdam sequi harum consequuntur quo est, aliquid magni quae neque impedit saepe maxime, adipisci iste et. Tempore eveniet in excepturi at minima cupiditate quos. Earum, sunt! Commodi a dignissimos architecto. Non enim sequi dignissimos. Doloremque esse delectus culpa provident!</p>
-        <a href="#" class="boton boton--absoluto"> <!--Bloque-->
-          <span>Ver runas</span>
+      <p class="tarj__descripcion"> Lee Sin se ha impuesto en el meta de las partidas de high elo en Corea y Eu West, pero no en la jungla, como acostumbramos a verlo. Sus estadísticas básicas son muy altas en comparación al resto de campeones y lo han vuelto una verdadera amenaza para los carrileros superiores y centrales!</p>
+        <a href="https://www.youtube.com/watch?v=gXahSb9IRY4" class="boton boton--absoluto"> <!--Bloque-->
+          <span>Ver guía</span>
         </a>
     </article>
   </article>
@@ -105,13 +105,13 @@
 
 <div class="intro container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
-    <h3 class="texto__titulo"> Llegó el parche 11.9, el parche del MSI! </h3>
-      <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
+    <h2 class="texto__titulo"> Notas de la versión 11.9 en breve </h2>
+      <p class="texto__texto"></p>
       <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
-      <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
-      <p class="texto__texto">A continuacion el resumen del parche</p>
+      <p class="texto__texto"> Tomamos la decisión de hacer  dos listas de niveles después de revisar en gran medida que los campeones brindados en una unica no rendia como se esperaba en todas las ligas. Finalmente acordamos que una lista general de niveles dirigida a jugadores platino o superior no serviría a la mayoría de la base de jugadores y nos propusimos hacer una Tier list general, y una Tier list para jugadores de High Elo
       <p class="botones "><a href="#general" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list General</a>
       <a href="#HighElo" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list High Elo</a></p>
+      <p class="texto__texto">A continuacion el resumen del parche</p>
   </div>
 </div>
 
@@ -121,14 +121,11 @@
 
 <div class="intro container mx-auto w-26 bordeSolido"> <!--COMO FUNCIONA NUESTRA METODOLOGIA-->
   <div class="texto">
-    <h3 class="texto__titulo"> Methodology TLDR </h3>
-      <p class="texto__texto">Esta lista fue seleccionada en colaboración con nuestros expertos de la Liga: Adam 'Moriarty' Isles, Dan 'Aux' Harrison y Phy, y nuestros especialistas en funciones: Shikari, Only, Command Attack y Yen. A diferencia de la mayoría de las listas de niveles, publicamos la nuestra antes, o como un parche se pone en marcha, de acuerdo con las predicciones de nuestra institucion</p>
+    <h3 class="texto__titulo">General: Metodología de clasificación</h3>
+      <p class="texto__texto">Esta lista fue seleccionada en colaboración con nuestros expertos de la Liga: Adam 'Moriarty' Isles, Dan 'Aux' Harrison y Phy, y nuestros especialistas en funciones: Shikari, Only, Command Attack y Yen. A diferencia de la mayoría de las listas de niveles, publicamos la nuestra antes, o cuando un parche se pone en marcha, de acuerdo con las predicciones de nuestra institución.</p>
       <ul class="texto__texto">
-        <li> Nuestra lista de primer nivel destinada a elo inferior, específicamente el elo de oro y los soportes circundantes. Estas selecciones son efectivas cuando se utilizan en rangos inferiores y son las mejores herramientas para ayudarle a subir la escalera SoloQ hasta Diamond.</li>
-      <li> El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?)</li>
-      <li>Nuestra lista de segundo nivel es para elo alto, dirigido a Diamond 2 y superior. Estas selecciones son curadas por nuestros expertos y son un indicador de la fuerza inherente de los campeones cuando se juegan al más alto nivel.</li>
-      <li>Tomamos la decisión de volver a dos listas de niveles después de revisar en gran medida los comentarios de nuestros usuarios. Finalmente acordamos que una lista general de niveles dirigida a Plat+ no serviría a la mayoría de la base de jugadores y habíamos perdido la marca</li>
-    </ul>
+        <li>Nuestra primera lista está centrada en elo bajo, específicamente oro y alrededores. Éstos picks son efectivos utilizados en elos bajos y conforman las mejores herramientas para escalar en la cola individual hasta Diamante.</li>
+     </ul>
   </div>
 </div>
 
@@ -138,14 +135,8 @@
 
 <div class="intro container mx-auto w-26 bordeSolido margenBot">
   <div class="texto"> <!--Bloque-->
-    <h3 class="texto__titulo"> Methodology TLDR </h3>
-      <p class="texto__texto">Esta lista fue seleccionada en colaboración con nuestros expertos de la Liga: Adam 'Moriarty' Isles, Dan 'Aux' Harrison y Phy, y nuestros especialistas en funciones: Shikari, Only, Command Attack y Yen. A diferencia de la mayoría de las listas de niveles, publicamos la nuestra antes, o como un parche se pone en marcha, de acuerdo con las predicciones de nuestra institucion</p>
-      <ul class="texto__texto">
-        <li> Nuestra lista de primer nivel destinada a elo inferior, específicamente el elo de oro y los soportes circundantes. Estas selecciones son efectivas cuando se utilizan en rangos inferiores y son las mejores herramientas para ayudarle a subir la escalera SoloQ hasta Diamond.</li>
-      <li> El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?)</li>
-      <li>Nuestra lista de segundo nivel es para elo alto, dirigido a Diamond 2 y superior. Estas selecciones son curadas por nuestros expertos y son un indicador de la fuerza inherente de los campeones cuando se juegan al más alto nivel.</li>
-      <li>Tomamos la decisión de volver a dos listas de niveles después de revisar en gran medida los comentarios de nuestros usuarios. Finalmente acordamos que una lista general de niveles dirigida a Plat+ no serviría a la mayoría de la base de jugadores y habíamos perdido la marca</li>
-    </ul>
+    <h3 class="texto__titulo">Elo alto: Metodología de clasificación</h3>
+      <p class="texto__texto">Nuestra segunda lista está centrada para partidas de alto nivel, Diamante 2 en adelante. Éstos picks son seleccionados por nuestros expertos y representan las fortalezas de los campeones cuando se juegan al máximo nivel.</p>
   </div>
 </div>
 
@@ -159,15 +150,19 @@
         <div class="row">
           <div class="col-4">
             <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
-            <p> <br><br> Unite a nuestro discord:</p>
-            <p> <br><br><br> seguinos en las redes</p>
+            <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
+            <p> Mantenete enterado: <br> 
+              <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
+              <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
+              <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
+            </p>
             <p><br><br>
             hecho por ferxdxdddd</p>
           </div>
           <div class="col">
             <h4 class="fTitulos">TOP</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
-            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="top.html">Podio </a></p>
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
