--- a/top.html
+++ b/top.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks toplane campeones-rotos-top que-juego-top mejor-top guia-top aprender-top como-carrear-como-top">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tier list 11.9</title>
+    <title>Top meta</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,73 +21,71 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-  <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="index.html">
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="30" height="28">
-      </a>
-  
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-  
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a href="index.html" class="navbar-item grisesito">
-          Home
-         </a>
-        <a class="navbar-link grisesito">
-          Mejores campeones por línea
+    <!-- NAVBAR -->
+    <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="index.html">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
         </a>
-
-        <div class="navbar-dropdown">
-          <a href="top.html" class="navbar-item">
-          TOP
-          </a>
-          <a href="jg.html" class="navbar-item">
-          JUNGLA
-          </a>
-          <a href="mid.html" class="navbar-item">
-          MID
-          </a>
-          <a href="bot.html" class="navbar-item">
-          ADC
-            </a>
-            <a href="supp.html" class="navbar-item">
-              SOPORTE
-              </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            SINERGIAS
-          </a>
-        </div>
+    
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
       <div class="navbar-start">
-        <a href="#" class="navbar-item grisesito">
-         Guías
+        <a href="index.html" class="navbar-item grisesito">
+         Home
         </a>
+        </div>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link grisesito">
+            Mejores campeones por línea
+          </a>
   
+          <div class="navbar-dropdown">
+            <a href="top.html" class="navbar-item">
+            TOP
+            </a>
+            <a href="jg.html" class="navbar-item">
+            JUNGLA
+            </a>
+            <a href="mid.html" class="navbar-item">
+            MID
+            </a>
+            <a href="bot.html" class="navbar-item">
+            ADC
+              </a>
+              <a href="supp.html" class="navbar-item">
+                SOPORTE
+                </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+              SINERGIAS
+            </a>
+          </div>
+
+          <div class="navbar-start">
+            <a href="index.html" class="navbar-item grisesito">
+              Guias
+            </a>
+            </div>
         </div>
       </div>
-  
-    </div>
-  </nav>
-
+    </nav>
   <!-- banner -->
 <div><img src="multimedia/urgot.jpg" alt="" width="100%"></div>
 
-  <div class="intro bordeSolido margenBot  bordeSolido">
-    <div class="texto"> <!--Bloque-->
-      <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
-        <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
-        <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
-        <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
-    </div>
-  </div>
-
-  <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h1 class="texto__titulo">Lista de tiers predictivos de League of Legends para el carril Superior</h1>
+      <p class="texto__texto">Aquí encontrarás el podio con los tres mejores picks para el carril superior, además de links directos a la sección específica del campeón en probuilds.com</p>
+ </div>
+</div>
+<!-- PODIO TOP -->
+  <div id=podioTop class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
     <div class="col row-cols-md-">
       <div class="card h-100">
         <img src="multimedia/shen.jpg" class="card-img-top zoom" alt="...">
@@ -127,14 +125,14 @@
   
   <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
-      <h3 class="texto__titulo">Mejor TOP del parche: SHEN</h3>
+      <h2 class="texto__titulo">Campeón destacado: Shen</h2>
         <ul class="texto__texto">
-            <li>Shen hace un gran trabajo de impacto en el mapa gracias a su definitiva global que acaba de ser potenciado para escalar con HP extra, lo que significa que será realmente sustancial en las etapas posteriores del juego.</li>
-           <br> <li>Por mucho que Shen pueda utilizar su ult para ayudar alrededor del mapa es un laner sólido encima de eso, siendo capaz de manejar enfrentamientos cuerpo a cuerpo bastante cómodamente debido a su capacidad para bloquear auto-ataques y hacer uso de Grasp para manejar moretones.</li>
-           <br> <li>Los emparejamientos a distancia pueden ser más complicados, pero es capaz de usar su burla para configurar ganks y buscar castigarlos.</li>
+            <li>Shen hace un gran trabajo impactando el mapa gracias a su definitiva global que acaba de ser potenciada para escalar con vida máxima adicional, lo que significa que será más fuerte en las etapas tardías del juego.</li>
+            <li>La definitiva de Shen no es la única fortaleza del campeón. Es un carrilero muy sólido, siendo capaz de manejar enfrentamientos cuerpo a cuerpo de una forma muy cómoda debido a su capacidad para bloquear auto-ataques.</li>
+            <li>Los emparejamientos a distancia pueden ser más complicados, pero Shen puede castigar a los enemigos que abusan de su rango creando oportunidades de emboscada con la provocación de su E.</li>
         </ul>
         <br>
-        <p class="texto__texto">A continuacion les dejamos las runas e itemizacion optima del campeon.</p>
+        <p class="texto__texto"></p>
     </div>
   </div>
 
@@ -145,10 +143,8 @@
 
 <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
-    <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
-      <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
-      <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
-      <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
+    <h3 class="texto__titulo"> Video informativo y didáctico </h3>
+      <p class="texto__texto">¡A continuación verás un video didactico altamente recomendado para poder aprender a jugar el campeon que recomendamos y cansarte de ganar partidas en soloQ!</p>
   </div>
 </div>
 
@@ -158,61 +154,63 @@
         <iframe width="50%" height="540" src="https://www.youtube.com/embed/3QnRCouW9qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
   </p>
 
-
   <footer> <!--Bloque-->
-    <div class="centrar margenTop">
+    <div class="centrar">
       <div class="container">
         <div class="row">
           <div class="col-4">
-            <p class="pad20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
-            <p> <br><br> Unite a nuestro discord:</p>
-            <p> <br><br><br> seguinos en las redes</p>
+            <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+            <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
+            <p> Mantenete enterado: <br> 
+              <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
+              <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
+              <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
+            </p>
             <p><br><br>
             hecho por ferxdxdddd</p>
           </div>
           <div class="col">
             <h4 class="fTitulos">TOP</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="top.html">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">JUNGLA</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">MID</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">ADC</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">SUPPORT</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
+          
         </div>
       </div>
   </div>
+
+</footer>
+
 
   <!--JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
