--- a/mid.html
+++ b/mid.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks midlane campeones-rotos-mid que-juego-mid mejor-mid guia-mid aprender-mid como-carrear-como-mid faker-builds">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tier list 11.9</title>
+    <title>Mid meta</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -22,76 +22,79 @@
 </head>
 <body>
 <header> <!--NAVBAR-->
-  <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="index.html">
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="112" height="28">
-      </a>
-  
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-  
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link grisesito">
-          Mejores campeones por línea
+    <!-- NAVBAR -->
+    <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="index.html">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
         </a>
-
-        <div class="navbar-dropdown">
-          <a href="top.html" class="navbar-item">
-          TOP
-          </a>
-          <a href="jg.html" class="navbar-item">
-          JUNGLA
-          </a>
-          <a href="mid.html" class="navbar-item">
-          MID
-          </a>
-          <a href="bot.html" class="navbar-item">
-          ADC
-            </a>
-            <a href="supp.html" class="navbar-item">
-              SOPORTE
-              </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            SINERGIAS
-          </a>
-        </div>
+    
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
       <div class="navbar-start">
-        <a href="#" class="navbar-item grisesito">
-         Guías
+        <a href="index.html" class="navbar-item grisesito">
+         Home
         </a>
+        </div>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link grisesito">
+            Mejores campeones por línea
+          </a>
   
+          <div class="navbar-dropdown">
+            <a href="top.html" class="navbar-item">
+            TOP
+            </a>
+            <a href="jg.html" class="navbar-item">
+            JUNGLA
+            </a>
+            <a href="mid.html" class="navbar-item">
+            MID
+            </a>
+            <a href="bot.html" class="navbar-item">
+            ADC
+              </a>
+              <a href="supp.html" class="navbar-item">
+                SOPORTE
+                </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+              SINERGIAS
+            </a>
+          </div>
+
+          <div class="navbar-start">
+            <a href="index.html" class="navbar-item grisesito">
+              Guias
+            </a>
+            </div>
         </div>
       </div>
-  
-    </div>
-  </nav>
+    </nav>
 </header>
   <div>
 <img src="multimedia/syndra.jpg" alt="" width="100%">
 </div>
-<div class="intro">
-    <div class="texto"> <!--Bloque-->
-      <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
-        <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
-        <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
-        <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
-    </div>
-  </div>
 
-  <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar">
+
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h1 class="texto__titulo">Lista de tiers predictivos para el carril Central</h1>
+     <p class="texto__texto">Aquí encontrarás el podio con los tres mejores picks para el carril central, además de links directos a la sección específica del campeón en probuilds.com</p>
+  </div>
+</div>
+
+  <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
     <div class="col row-cols-md-">
       <div class="card h-100">
         <img src="multimedia/anivia.jpg" class="card-img-top zoom" alt="...">
         <div class="card-body silver">
-          <h5 class="card-title">Anivia</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, perferendis!</p>
+          <h5 class="card-title colorNegroT">Anivia</h5>
         </div>
         <div class="card-footer">
           <small class="text-muted">Ver runas en Probuilds</small>
@@ -102,8 +105,7 @@
       <div class="card h-100">
         <img src="multimedia/vladfull.jpg" class="card-img-top zoom" alt="...">
         <div class="card-body gold">
-          <h5 class="card-title">Vladimir</h5>
-          <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo, eum.</p>
+          <h5 class="card-title colorNegroT">Vladimir</h5>
         </div>
         <div class="card-footer">
           <small class="text-muted">Ver runas en Probuilds</small>
@@ -114,8 +116,8 @@
       <div class="card h-100">
         <img src="multimedia/fizz.jpg" class="card-img-top zoom" alt="...">
         <div class="card-body bronce">
-          <h5 class="card-title">Fizz</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, perferendis.</p>
+          <h5 class="card-title colorNegroT">Fizz</h5>
+
         </div>
         <div class="card-footer">
           <a href="probuilds.com"> <small class="text-muted">Ver runas en Probuilds</small></a>
@@ -123,93 +125,84 @@
       </div>
     </div>
   </div>
-
-  <div class="comms">
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
-      <h3 class="texto__titulo">Mejor MID del parche: VLADIMIR</h3>
+      <h3 class="texto__titulo">Campeón destacado: Vladimir</h3>
         <ul class="texto__texto">
-            <li>Vlad consiguió algunos buffs sólidos a su Q CD y aunque se revirtieron parcialmente su tasa de victorias voló sustancialmente y esperamos que se mantenga a un nivel sólido.</li>
-            <li>La gran cantidad de celeridad de habilidad disponible para él lo pone en un gran lugar, ya que es capaz de rotar sus habilidades mucho más rápido lo que le permite mantener su propio mejor en escaramuzas y peleas de equipo.</li>
-            <li>Vlad siempre ha escalado como un monstruo y eso no ha cambiado, así que si estás llegando tarde al juego es probable que estés ganando el juego.</li>
+            <li>Vladimir ha recibido mejoras en su habilidad principal de sustento y daño, su Q. Ésto lo volverá un pick más sólido en la linea y mejorará su capacidad para intercambiar daños.</li>
+            <li>Con la gran cantidad de reducción de enfriamiento a su disposición, Vladimir estará en un puesto muchísimo mejor al que se encontraba en versiones previas. Además, éste campeón siempre ha escalado como un monstruo, si llegas al juego tardío con los objetos correctos, la partida estará prácticamente ganada.</li>
         </ul>
     </div>
   </div>
 
-  <div class="columns">
-    <div class="column">
-      First column
-    </div>
-    <div class="column">
-      Second column
-    </div>
-    <div class="column">
-      Third column
-    </div>
-    <div class="column">
-      Fourth column
-    </div>
-  </div>
+  <section class="runasybuild centrar">
+    <img class="centrar" src="multimedia/vladi.png" alt="">
+    <img class="centrar" src="multimedia/.png" alt="">
+  </section>
 
-  <div class="experto">
-      <div class="comm">
+  <p class="experto pad20 centrar">
+
         <iframe width="50%" height="540" src="https://www.youtube.com/watch?v=kBA2eK7fTak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
-      </div>
-  </div>
+
+  </p>
 
   <footer> <!--Bloque-->
-    <div class="centrar margenTop">
+    <div class="centrar">
       <div class="container">
         <div class="row">
           <div class="col-4">
-            <p class="pad20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
-            <p> <br><br> Unite a nuestro discord:</p>
-            <p> <br><br><br> seguinos en las redes</p>
-            <p><br><br><br><br>
+            <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+            <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
+            <p> Mantenete enterado: <br> 
+              <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
+              <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
+              <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
+            </p>
+            <p><br><br>
             hecho por ferxdxdddd</p>
           </div>
           <div class="col">
             <h4 class="fTitulos">TOP</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="top.html">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">JUNGLA</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">MID</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">ADC</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">SUPPORT</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
+          
         </div>
       </div>
   </div>
+
+</footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
