agregue la seccion de coaching y cambie los banners

--- a/coach.html
+++ b/coach.html
@@ -78,85 +78,50 @@
     </nav>
 </header>
 
-<!-- Banner principal -->
-<div class=" w-screen">
-  <img src="multimedia/vlad.jpg" alt="" width="100%">
-</div>
+<div id="coachMain">
+    <img src="multimedia/coach.jpg" width="100%" alt="banner"/>
+    <section id="flechita" >
+    <a class="centrar" href="http://www.guiaplaza.com">
+    <img src="multimedia/flecha-hacia-abajo-para-navegar.png" width="10%" height="10%"/>
+    </a>
+    <section >
+    </div> 
 
-<!-- Introducción a la página -->
-<div class="intro container mx-auto w-26 bordeSolido">
-  <div class="texto"> <!--Bloque-->
-    <h1 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h1>
-      <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
-      <P class="texto__texto">Aquí encontrarás los mejores campeones para hacerlo en la cola individual, actualizados parche a parche</P>
-      <p class="texto__texto"></p>
+  <div class="card-group sinBorde">
+    <div class="card">
+      <img src="multimedia/ashe.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
   </div>
-</div>
-
-<!-- Pick destacado del parche -->
-<article class="contenedor">
-  <article class="tarj"> <!--Bloque-->
-    <a href="" class="tarj__foto zoom"><img src="multimedia/lee sin.jpg" alt="lee"></a>
-    <article class="tarj__textos">
-      <h3 class="tarj__titulo"><a href="#" class="tarj__enlace">Lee Sin</a></h3>
-      <p class="tarj__descripcion"> Lee Sin se ha impuesto en el meta de las partidas de high elo en Corea y Eu West, pero no en la jungla, como acostumbramos a verlo. Sus estadísticas básicas son muy altas en comparación al resto de campeones y lo han vuelto una verdadera amenaza para los carrileros superiores y centrales!</p>
-        <a href="https://www.youtube.com/watch?v=gXahSb9IRY4" class="boton boton--absoluto"> <!--Bloque-->
-          <span>Ver guía</span>
-        </a>
-    </article>
-  </article>
-</article>
-
-<!-- Resumen de la version -->
-<div class="intro container mx-auto w-26 bordeSolido">
-  <div class="texto"> <!--Bloque-->
-    <h2 class="texto__titulo"> Notas de la versión 11.9 en breve </h2>
-      <p class="texto__texto"></p>
-      <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
-      <p class="texto__texto"> Tomamos la decisión de hacer  dos listas de niveles después de revisar en gran medida que los campeones brindados en una unica no rendia como se esperaba en todas las ligas. Finalmente acordamos que una lista general de niveles dirigida a jugadores platino o superior no serviría a la mayoría de la base de jugadores y nos propusimos hacer una Tier list general, y una Tier list para jugadores de High Elo
-      <p class="botones "><a href="#general" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list General</a>
-      <a href="#HighElo" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list High Elo</a></p>
-      <p class="texto__texto">A continuacion el resumen del parche</p>
-  </div>
-</div>
-
-<!--RESUMEN DEL PARCHE (foto)-->
-<p class="centrar margenTop"> 
-  <img class="centrar m0" src="multimedia/resumen11.9.jpg" alt="" width="70%"> <!--Bloque-->
-</p>
-
-<!--COMO FUNCIONA NUESTRA METODOLOGIA-->
-<div class="intro container mx-auto w-26 bordeSolido"> 
-  <div class="texto">
-    <h3 class="texto__titulo">General: Metodología de clasificación</h3>
-      <p class="texto__texto">Esta lista fue seleccionada en colaboración con nuestros expertos de la Liga: Adam 'Moriarty' Isles, Dan 'Aux' Harrison y Phy, y nuestros especialistas en funciones: Shikari, Only, Command Attack y Yen. A diferencia de la mayoría de las listas de niveles, publicamos la nuestra antes, o cuando un parche se pone en marcha, de acuerdo con las predicciones de nuestra institución.</p>
-      <ul class="texto__texto">
-        <li>Nuestra primera lista está centrada en elo bajo, específicamente oro y alrededores. Éstos picks son efectivos utilizados en elos bajos y conforman las mejores herramientas para escalar en la cola individual hasta Diamante.</li>
-     </ul>
-  </div>
-</div>
-
-<!-- lista general (foto) -->
-<p id="general" class="centrar margenTop"> 
-  <img class="centrar m0" src="multimedia/tierlist.jpg" alt="" width="50%"> <!--Bloque-->
-</p>
-
-<!-- high elo explicacion -->
-<div class="intro container mx-auto w-26 bordeSolido margenBot">
-  <div class="texto"> <!--Bloque-->
-    <h3 class="texto__titulo">Elo alto: Metodología de clasificación</h3>
-      <p class="texto__texto">Nuestra segunda lista está centrada para partidas de alto nivel, Diamante 2 en adelante. Éstos picks son seleccionados por nuestros expertos y representan las fortalezas de los campeones cuando se juegan al máximo nivel.</p>
-  </div>
-</div>
-
-<!-- high elo foto -->
-<p id="HighElo" class="centrar margenTop margenBot"> <!--HIGH ELO LIST-->
-  <img class="centrar m0" src="multimedia/tierlist.jpg" alt="" width="50%"> <!--Bloque-->
-</p>
 
 
-<!-- FOOTER -->
-  <footer> <!--Bloque-->
+
+
+
+
+
+
+<footer> <!--Bloque-->
     <div class="centrar">
       <div class="container">
         <div class="row">
@@ -171,7 +136,6 @@
             <p><br><br>
             hecho por ferxdxdddd</p>
           </div>
-          <!-- top -->
           <div class="col">
             <h4 class="fTitulos">TOP</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -179,7 +143,6 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
-          <!-- jg -->
           <div class="col">
             <h4 class="fTitulos">JUNGLA</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -187,7 +150,6 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
-          <!-- mid -->
           <div class="col">
             <h4 class="fTitulos">MID</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -195,7 +157,6 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
-          <!-- adc -->
           <div class="col">
             <h4 class="fTitulos">ADC</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -203,7 +164,6 @@
             <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
             <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
-          <!-- supp -->
           <div class="col">
             <h4 class="fTitulos">SUPPORT</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
