--- a/supp.html
+++ b/supp.html
@@ -71,7 +71,7 @@
 
           <div class="navbar-start">
             <a href="index.html" class="navbar-item grisesito">
-              Guias
+              Coaching
             </a>
             </div>
         </div>
